--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>University Application</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1 class="mt-5">Welcome to the University Application</h1>
-        <p class="lead">Manage your university's subjects and teachers with ease.</p>
-        <div class="mt-4">
-            <a href="/subjects" class="btn btn-primary btn-lg">Manage Subjects</a>
-            <a href="/teachers" class="btn btn-secondary btn-lg">Manage Teachers</a>
+    <div class="container mt-5">
+        <div class="text-center">
+            <h1>Welcome to the University Management System</h1>
+            <p class="lead">Manage teachers and subjects easily</p>
+            <a href="/teachers" class="btn btn-primary btn-lg">Manage Teachers</a>
+            <a href="/subjects" class="btn btn-secondary btn-lg">Manage Subjects</a>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
