--- a/src/main/resources/templates/teachers/list.html
+++ b/src/main/resources/templates/teachers/list.html
@@ -2,18 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Teachers List</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Teachers</h1>
-        <a href="/teachers/create" class="btn btn-primary mb-3">Add New Teacher</a>
-        <table class="table table-bordered">
+    <div class="container mt-5">
+        <h1>Teachers List</h1>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>ID</th>
                     <th>Name</th>
-                    <th>Last Name</th>
+                    <th>Lastname</th>
                     <th>Age</th>
                     <th>CI</th>
                     <th>Email</th>
@@ -32,13 +31,13 @@
                     <td th:text="${teacher.subject.name}"></td>
                     <td>
                         <a th:href="@{/teachers/edit/{id}(id=${teacher.id})}" class="btn btn-warning btn-sm">Edit</a>
-                        <form th:action="@{/teachers/delete/{id}(id=${teacher.id})}" method="post" style="display:inline;">
-                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                        </form>
+                        <a th:href="@{/teachers/delete/{id}(id=${teacher.id})}" class="btn btn-danger btn-sm">Delete</a>
                     </td>
                 </tr>
             </tbody>
         </table>
+        <a href="/teachers/create" class="btn btn-primary">Add New Teacher</a>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
