--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,22 @@
 <body>
     <div class="container mt-5">
         <div class="text-center">
-            <h1>Welcome to the University Management System</h1>
-            <p class="lead">Manage teachers and subjects easily</p>
-            <a href="/teachers" class="btn btn-primary btn-lg">Manage Teachers</a>
-            <a href="/subjects" class="btn btn-secondary btn-lg">Manage Subjects</a>
+            <div>
+                <img src="https://www.umss.edu.bo/wp-content/uploads/2022/08/Logo_umss.png" alt="" srcset="">
+            </div>
+            <h1>Bienvenido</h1>
+            <p>Administración del sistema:</p>
+        <div class="row">
+            <div class="col-md-4">
+                <a href="/teachers" class="btn btn-primary btn-block w-100">Manage Teachers</a>
+            </div>
+            <div class="col-md-4">
+                <a href="/subjects" class="btn btn-secondary btn-block w-100">Manage Subjects</a>
+            </div>
+            <div class="col-md-4">
+                <a href="/students" class="btn btn-warning btn-block w-100">Manage Students</a>
+            </div>
+        </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
