--- a/src/main/resources/templates/teachers/form.html
+++ b/src/main/resources/templates/teachers/form.html
@@ -5,6 +5,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <!-- barra de navegacion -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="https://www.umss.edu.bo/wp-content/uploads/2022/08/Logo_umss.png" alt=""  height="68">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/teachers" class="nav-link active">Teachers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/subjects" class="nav-link">Subjects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/students" class="nav-link">Students</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- fin barra de navegacion -->
+     
     <div class="container mt-5">
         <h1 th:text="${teacher.id != null ? 'Edit Teacher' : 'Create Teacher'}" class="mb-4"></h1>
         <form th:action="@{/teachers}" th:object="${teacher}" method="post" class="row g-3">
