Establecer en null el atributo subject_id de la entidad teacher, para que cuando se elimine un subject, el atributo subject_id de teacher quede con null. Ahora este atributo se volvió nullable.

--- a/src/main/resources/templates/teachers/form.html
+++ b/src/main/resources/templates/teachers/form.html
@@ -78,7 +78,7 @@
             <div class="col-md-6">
                 <label for="subject" class="form-label">Subject</label>
                 <select id="subject" th:field="*{subject}" class="form-select">
-                    <option value="" disabled selected>Select a subject</option>
+                    <option value="" selected>Select a subject</option>
                     <option th:each="subject : ${subjects}" 
                             th:value="${subject.id}" 
                             th:text="${subject.name}"></option>
