--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,18 +6,45 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2>Login</h2>
-        <form th:action="@{/login}" method="post">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" name="username" class="form-control" placeholder="Enter username" required>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div>
+                    <img src="https://www.umss.edu.bo/wp-content/uploads/2022/08/Logo_umss.png" alt="" srcset="">
+                </div>
+
+                <h2 class="text-center">Login</h2>
+        
+                <!-- Mensaje de error de login incorrecto -->
+                <div th:if="${param.error}" class="alert alert-danger">
+                    Invalid username or password.
+                </div>
+        
+                <!-- Mensaje que se muestra cuando el usuario ha cerrado sesión -->
+                <div th:if="${param.logout}" class="alert alert-success">
+                    You have been logged out successfully.
+                </div>
+        
+                <!-- Formulario de login -->
+                <form th:action="@{/login}" method="post">
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" id="username"  name="username" class="form-control" autofocus="autofocus">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" id="password" name="password" class="form-control">
+                    </div>
+
+                    <div class="form-group mb-3">
+                        <button type="submit" class="btn btn-primary">Login</button>
+                        <span class="small">Not registered?
+                            <a th:href="@{/register}">Register here</a>
+                        </span>
+                    </div>
+                </form>
+                
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" class="form-control" placeholder="Enter password" required>
-            </div>
-            <button type="submit" class="btn btn-primary mt-3">Login</button>
-        </form>
+        </div>
     </div>
 </body>
 </html>
