--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6">
-                <div>
+                <div class="text-center">
                     <img src="https://www.umss.edu.bo/wp-content/uploads/2022/08/Logo_umss.png" alt="" srcset="">
                 </div>
 
@@ -42,7 +42,7 @@
                         </span>
                     </div>
                 </form>
-                
+
             </div>
         </div>
     </div>
