--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,18 +6,34 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2>Register</h2>
-        <form th:action="@{/register}" th:object="${user}" method="post">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" th:field="*{username}" class="form-control" placeholder="Enter username" required>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="text-center">
+                    <img src="https://www.umss.edu.bo/wp-content/uploads/2022/08/Logo_umss.png" alt="" srcset="">
+                </div>
+
+                <h2 class="text-center">Register</h2>
+
+                <form th:action="@{/register}" th:object="${user}" method="post">
+                    <div class="form-group mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" th:field="*{username}" name="username" class="form-control" placeholder="Enter username" >
+                        <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" th:field="*{password}" name="password" class="form-control" placeholder="Enter password" >
+                        <div class="invalid-feedback d-block" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+                    </div>
+                    <div class="form-group mb-3">
+                        <button type="submit" class="btn btn-primary">Register</button>
+                        <span class="small">do you already have an account?
+                            <a th:href="@{/login}">Login</a>
+                        </span>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" th:field="*{password}" class="form-control" placeholder="Enter password" required>
-            </div>
-            <button type="submit" class="btn btn-primary mt-3">Register</button>
-        </form>
+        </div>
     </div>
 </body>
 </html>
